@startuml
top to bottom direction
hide empty methods

' Here we adjust the horizontal spacing for better spatial rendering (the PlantUML default is ~20)
skinparam nodesep 20
' Here we adjust the vertical spacing for better spatial rendering (the PlantUML default is ~30)
skinparam ranksep 30

skinparam BackgroundColor #FFFFFF
skinparam shadowing false
skinparam RoundCorner 5
skinparam BorderColor #454645
skinparam ArrowColor #454645
skinparam FontColor #000000

skinparam class {
  ' Concrete classes style definition
  BackgroundColor #FFFFE0
  FontColor #000000
  AttributeFontColor #000000
  StereotypeFontColor #000000
  HeaderFontColor #000000
  BorderColor #454645
  BorderThickness 1
  
  ' Abstract classes style definition
  BackgroundColor<<abstract>> #D3D3D3
  FontColor<<abstract>> #000000
  AttributeFontColor<<abstract>> #000000
  StereotypeFontColor<<abstract>> #000000
  HeaderFontColor<<abstract>> #000000
  BorderColor<<abstract>> #454645
  BorderThickness<<abstract>> 1
  
  ' Enumerations style definition
  BackgroundColor<<enumeration>> #90EE90
  FontColor<<enumeration>> #000000
  AttributeFontColor<<enumeration>> #000000
  StereotypeFontColor<<enumeration>> #000000
  HeaderFontColor <<enumeration>> #000000
  BorderColor<<enumeration>> #454645
  BorderThickness<<enumeration>> 1
  
  ' CIMDatatypes style definition
  BackgroundColor<<CIMDatatype>> #FFEBCD
  FontColor<<CIMDatatype>> #000000
  AttributeFontColor<<CIMDatatype>> #000000
  StereotypeFontColor<<CIMDatatype>> #000000
  HeaderFontColor<<CIMDatatype>> #000000
  BorderColor<<CIMDatatype>> #454645
  BorderThickness<<CIMDatatype>> 1
  
  ' Compound classes style definition
  BackgroundColor<<Compound>> #FFEBCD
  FontColor<<Compound>> #000000
  AttributeFontColor<<Compound>> #000000
  StereotypeFontColor<<Compound>> #000000
  HeaderFontColor<<Compound>> #000000
  BorderColor<<Compound>> #454645
  BorderThickness<<Compound>> 1
  
  ' Primitive classes style definition
  BackgroundColor<<Primitive>> #E6E6FF
  FontColor<<Primitive>> #000000
  AttributeFontColor<<Primitive>> #000000
  StereotypeFontColor<<Primitive>> #000000
  HeaderFontColor<<Primitive>> #000000
  BorderColor<<Primitive>> #454645
  BorderThickness<<Primitive>> 1
  
  ' Errors classes style definition
  BackgroundColor<<error>> #FFC0CB
  FontColor<<error>> #000000
  AttributeFontColor<<error>> #000000
  StereotypeFontColor<<error>> #000000
  HeaderFontColor<<error>> #000000
  BorderColor<<error>> #454645
  BorderThickness<<error>> 1
}
skinparam shadowing true

hide <<abstract>> stereotype
hide <<error>> stereotype


skinparam note {
  BorderColor #454645
  BorderThickness 1.5
  FontSize 14
  Font Bold
  FontColor #000000
}
' Add a note towards the upper left corner of the diagram
note as GeographicalLocationNote #lightyellow
   Profile: GeographicalLocation
   Namespace: http://www.ucaiug.org/gmdm_location#
end note

' ACLineSegment inherits from Conductor
class ACLineSegment <<Description>>  {
}

Conductor <|-- ACLineSegment

' AsynchronousMachine inherits from RotatingMachine
class AsynchronousMachine <<Description>>  {
}

RotatingMachine <|-- AsynchronousMachine

' Breaker inherits from ProtectedSwitch
class Breaker <<Description>>  {
}

ProtectedSwitch <|-- Breaker

' BusbarSection inherits from Connector
class BusbarSection <<Description>>  {
}

Connector <|-- BusbarSection

' ConductingEquipment inherits from Equipment
abstract class ConductingEquipment  <<abstract>> {
}

Equipment <|-- ConductingEquipment

' Conductor inherits from ConductingEquipment
abstract class Conductor  <<abstract>> {
}

ConductingEquipment <|-- Conductor

' Connector inherits from ConductingEquipment
abstract class Connector  <<abstract>> {
}

ConductingEquipment <|-- Connector

' CoordinateSystem inherits from IdentifiedObject
class CoordinateSystem   {
}

IdentifiedObject <|-- CoordinateSystem

' Disconnector inherits from Switch
class Disconnector <<Description>>  {
}

Switch <|-- Disconnector

' EnergyConnection inherits from ConductingEquipment
abstract class EnergyConnection  <<abstract>> {
}

ConductingEquipment <|-- EnergyConnection

' EnergyConsumer inherits from EnergyConnection
class EnergyConsumer <<NC>><<Description>>  {
}

EnergyConnection <|-- EnergyConsumer

' EnergySource inherits from EnergyConnection
class EnergySource <<Description>>  {
}

EnergyConnection <|-- EnergySource

' Equipment inherits from PowerSystemResource
abstract class Equipment  <<abstract>> {
}

PowerSystemResource <|-- Equipment

' Fuse inherits from Switch
class Fuse <<Description>>  {
}

Switch <|-- Fuse

' GeometricElement inherits from Identity
abstract class GeometricElement  <<abstract>> {
}

Identity <|-- GeometricElement

' IdentifiedObject inherits from Identity
abstract class IdentifiedObject  <<abstract>> {
   +description : string [0..1]
   +name : string [0..1]
}

Identity <|-- IdentifiedObject

' Identity
abstract class Identity  <<abstract>> {
   +identifier : string [1]
}


' LinearShuntCompensator inherits from ShuntCompensator
class LinearShuntCompensator <<Description>>  {
}

ShuntCompensator <|-- LinearShuntCompensator

' LoadBreakSwitch inherits from ProtectedSwitch
class LoadBreakSwitch <<Description>>  {
}

ProtectedSwitch <|-- LoadBreakSwitch

' Location inherits from IdentifiedObject
abstract class Location  <<abstract>> {
}

IdentifiedObject <|-- Location
Location "+Location 0..*" --> "+CoordinateSystem 0..1" CoordinateSystem

' Name
abstract class Name <<Attribute>> <<abstract>> {
}


' PositionPoint inherits from GeometricElement
class PositionPoint <<ShadowExtension>>  {
   +sequenceNumber : integer [0..1]
   +xPosition : string [1]
   +yPosition : string [1]
   +zPosition : string [0..1]
}

GeometricElement <|-- PositionPoint
PositionPoint "+PositionPoints 0..*" --> "+Location 1" Location

' PowerElectronicsConnection inherits from RegulatingCondEq
class PowerElectronicsConnection <<Description>>  {
}

RegulatingCondEq <|-- PowerElectronicsConnection

' PowerSystemResource inherits from IdentifiedObject
abstract class PowerSystemResource  <<abstract>> {
}

IdentifiedObject <|-- PowerSystemResource
PowerSystemResource "+PowerSystemResources 0..*" --> "+Location 0..1" Location

' PowerTransformer inherits from ConductingEquipment
class PowerTransformer <<Description>>  {
}

ConductingEquipment <|-- PowerTransformer

' ProtectedSwitch inherits from Switch
abstract class ProtectedSwitch <<gb>> <<abstract>> {
}

Switch <|-- ProtectedSwitch

' Recloser inherits from ProtectedSwitch
class Recloser <<Description>>  {
}

ProtectedSwitch <|-- Recloser

' RegulatingCondEq inherits from EnergyConnection
abstract class RegulatingCondEq  <<abstract>> {
}

EnergyConnection <|-- RegulatingCondEq

' RotatingMachine inherits from RegulatingCondEq
abstract class RotatingMachine  <<abstract>> {
}

RegulatingCondEq <|-- RotatingMachine

' Sectionaliser inherits from Switch
class Sectionaliser <<Description>>  {
}

Switch <|-- Sectionaliser

' SeriesCompensator inherits from ConductingEquipment
class SeriesCompensator <<Description>>  {
}

ConductingEquipment <|-- SeriesCompensator

' ShuntCompensator inherits from RegulatingCondEq
abstract class ShuntCompensator  <<abstract>> {
}

RegulatingCondEq <|-- ShuntCompensator

' Switch inherits from ConductingEquipment
abstract class Switch  <<abstract>> {
}

ConductingEquipment <|-- Switch

' SynchronousMachine inherits from RotatingMachine
class SynchronousMachine <<Description>>  {
}

RotatingMachine <|-- SynchronousMachine

@enduml
